Add routes for quests and users

--- a/frontend/pages/allQuests.html
+++ b/frontend/pages/allQuests.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Quests</title>
+    <link rel="stylesheet" href="../styles/header.css" />
   </head>
   <body>
     <h1>All Quests</h1>
