--- a/frontend/pages/quests.html
+++ b/frontend/pages/quests.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PhotoQuest - quests</title>
+    <link rel="stylesheet" href="../styles/quests.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
   </head>
   <body>
     <script src="../scripts/quests.js" type="module"></script>
