Add profile page, quest page

--- a/frontend/pages/quest.html
+++ b/frontend/pages/quest.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quest</title>
     <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/quest.css" />
   </head>
   <body>
-    <h1>This is a quest</h1>
     <script src="../scripts/quest.js" type="module"></script>
   </body>
 </html>
